migrate to pylades

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@uniswap/liquidity-staker",
-  "version": "1.0.2",
-  "author": "Noah Zinsmeister",
+  "name": "@pyladesprotocol/liquidity-staker",
+  "version": "1.0.0",
+  "author": "Andreas Bigger",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/liquidity-staker"
+    "url": "https://github.com/pylades/liquidity-staker"
   },
   "files": [
     "build"
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
-    "@uniswap/v2-core": "^1.0.1",
+    "@pyladesprotocol/core": "^1.0.1",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.0",
     "ethereumjs-util": "^7.0.5",
